# unramble

./: .gitignore  BENCHMARK.md  CLAUDE.md  DEVELOP.md  Makefile  README.md  project.yml
.github/workflows/: cross-platform.yml  release-app.yml  tests.yml
FreeFlowApp/: Info.plist  models.json
FreeFlowApp/ModelSources/qwen3-0.6b-4bit-polish-adapter/: adapter_config.json
FreeFlowApp/Resources/: onboarding.html  settings.html
FreeFlowApp/Sources/: AppDelegate.swift  HUDContentView.swift  HUDController.swift  HUDViewModel.swift  MenuBarController.swift  OnboardingBridge.swift  OnboardingController.swift  OnboardingWindow.swift  PermissionController.swift  SettingsController.swift
FreeFlowKit/: Package.swift
FreeFlowKit/Tests/FreeFlowKitTests/: AsyncSerialOperationQueueTests.swift  AsyncSingleFlightTests.swift  AudioCaptureOwnershipTests.swift  AudioCaptureReleaseFenceTests.swift  AudioEngineStartResetLedgerTests.swift  AudioForwardingOperationTests.swift  AudioLevelAnalyzerTests.swift  AudioPipelineTests.swift  AudioResamplerTests.swift  BufferedPasteOwnershipTests.swift  CGEventTapHotkeyProviderTests.swift  CloudDictationLiveHarnessTests.swift  CommitTrackerTests.swift  DiagnosticsPrivacyTests.swift  DictationAudioSinkTests.swift  DictationModeTransitionTests.swift  DictationPipelineTests.swift  DictationProviderTests.swift  DictationTests.swift  FlowFeatureTest.swift  HotkeyPipelineDriverTests.swift  LocalModelDictationProviderTests.swift  LocalModelIntegrationTests.swift  LocalModelManagerTests.swift  LocalModelRuntimeTests.swift  LocalModelStreamingProviderTests.swift  LocalModelTestSupport.swift  LocalStreamingProviderTests.swift  LocalStreamingSeamTests.swift  LocalUnitPolicyTests.swift  LocalUnitStreamingTests.swift  MLXLLMEngineTests.swift  MLXPolishClientTests.swift  MicDiagnosticStoreTests.swift  MicrophoneCaptureCoordinatorTests.swift  MicrophonePreviewClientTests.swift  MockStreamingProviderContractTests.swift  ModeShortcutPolicyTests.swift  NemotronBaselineTests.swift  NemotronFloat16Tests.swift  (+39 more)
UnrambleApp/: Info.plist
UnrambleApp/Resources/: AppIcon.icns  onboarding.html  settings.html
UnrambleApp/Sources/: AppDelegate.swift  HUDContentView.swift  HUDController.swift  HUDOverlayWindow.swift  HUDViewModel.swift  HUDVisualState.swift  InAppMessageService.swift  MenuBarController.swift  OnboardingBridge.swift  OnboardingController.swift  OnboardingWindow.swift  PermissionController.swift  SettingsBridge.swift  SettingsController.swift  SettingsWindow.swift  UnrambleApp.swift  UpdaterService.swift
UnrambleKit/: Package.resolved  Package.swift
UnrambleKit/Sources/ObjCExceptionCatcher/: ObjCExceptionCatcher.m
UnrambleKit/Tests/UnrambleKitOSTests/: CGEventTapHotkeyProviderTests.swift  CoreAudioDeviceProviderTests.swift  MainThreadDelayTests.swift  SoundFeedbackTests.swift
UnrambleKit/Tests/UnrambleKitTestSupport/: MockAudioDeviceProvider.swift  MockHotkeyProvider.swift  MockLocalLLMEngine.swift  MockStreamingProvider.swift
UnrambleKit/Tests/UnrambleKitTests/: AsyncSerialOperationQueueTests.swift  AsyncSingleFlightTests.swift  AudioCaptureOwnershipTests.swift  AudioCaptureReleaseFenceTests.swift  AudioDeviceTests.swift  AudioEngineStartResetLedgerTests.swift  AudioForwardingOperationTests.swift  AudioLevelAnalyzerTests.swift  AudioPipelineTests.swift  AudioResamplerTestSupport.swift  AudioResamplerTests.swift  BiasSTTReplayTests.swift  BrowserURLReaderTests.swift  BufferedPasteOwnershipTests.swift  CGEventTapHotkeyProviderTests.swift  CloudDictationLiveHarnessTests.swift  CloudReplayTests.swift  ContextAssemblyTests.swift  DetachedPipelineGenerationTests.swift  DiagnosticsPrivacyTests.swift  DictationAudioSinkTests.swift  DictationCompositionFactoryTests.swift  DictationModeAvailabilityTests.swift  DictationModeTransitionTests.swift  DictationPipelineTests.swift  DictationProviderTests.swift  (+69 more)
desktop/: .gitignore  electron-builder.yml  electron.vite.config.ts  package-lock.json  package.json  tsconfig.node.json  tsconfig.web.json
docs/: ARCHITECTURE.md  LINUX.md  PORT_RESULT.md  PORT_STATUS.md
rust/: Cargo.toml
rust/crates/freeflow-core/: Cargo.toml
rust/crates/freeflow-core/src/: audio.rs  error.rs  lib.rs  models.rs  pipeline.rs  polish.rs  state.rs  traits.rs  transcript.rs
rust/crates/freeflow-daemon/: Cargo.toml
rust/crates/freeflow-daemon/src/: app.rs  credentials.rs  main.rs
rust/crates/freeflow-mock-openai/: Cargo.toml
rust/crates/freeflow-mock-openai/src/: lib.rs  main.rs
rust/crates/freeflow-openai/: Cargo.toml
rust/crates/freeflow-openai/src/: batch.rs  client.rs  lib.rs  polish.rs  realtime.rs
rust/crates/freeflow-openai/tests/: providers.rs
rust/crates/freeflow-platform/: Cargo.toml
rust/crates/freeflow-platform-linux/: Cargo.toml
rust/crates/freeflow-platform-linux/src/: audio.rs  context.rs  credentials.rs  hotkey.rs  injection.rs  lib.rs  portal_hotkey.rs  session.rs  x11.rs
rust/crates/freeflow-platform-linux/tests/: pulse_connection_reuse.rs  wayland_injection.rs
rust/crates/freeflow-platform/src/: lib.rs
rust/crates/freeflow-rpc/: Cargo.toml
rust/crates/freeflow-rpc/src/: contract.rs  lib.rs  server.rs  types.rs
scripts/: bootstrap-linux.sh  bootstrap-model-venv.py  build-linux.sh  bump-cask.sh  check-test-inventory.sh  ci-import-cert.sh  ci-publish-release.sh  ci-store-notary-credentials.sh  ci-test-suites.txt  dev-linux.sh  download-models.py  download-models.sh  generate-rpc-types.sh  install-linux.sh  messages.json  model-requirements.in  model-requirements.txt  models.sh  package-linux.sh  parse-test-results.sh  print-test-logs.sh  release-candidate.sh  release.sh  run-tests.sh  test-install-linux.sh  test-linux.sh  test-runner-tests.sh  verify-model-pack.py
scripts/tests/: test_bootstrap_model_venv.py  test_download_models.py  test_verify_model_pack.py
training/: README.md  generate_test_data.py  generate_training_data.py  iterative-tests.json  lora-config.yaml  p1-eval-set.json  polish-tests.yaml  polish-training-data.yaml  requirements.txt  train.jsonl  valid.jsonl
(+190 files in other folders)
