[workspace]
resolver = "2"
members = [
    "crates/freeflow-core",
    "crates/freeflow-openai",
    "crates/freeflow-mock-openai",
    "crates/freeflow-platform",
    "crates/freeflow-platform-linux",
    "crates/freeflow-rpc",
    "crates/freeflow-daemon",
]

[workspace.package]
version = "0.2.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/mrinalwadhwa/freeflow"
rust-version = "1.88"

[workspace.dependencies]
async-trait = "0.1.89"
axum = { version = "0.8.9", features = ["multipart", "ws"] }
arboard = { version = "3.6.1", default-features = false, features = ["wayland-data-control"] }
base64 = "0.22.1"
cpal = { version = "0.18.1", features = ["pulseaudio"] }
directories = "6.0.0"
futures-util = "0.3.31"
once_cell = "1.21.3"
keyring = "4.1.4"
regex = "1.13.0"
reqwest = { version = "0.13.4", default-features = false, features = ["json", "multipart", "rustls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["macros", "net", "process", "rt-multi-thread", "signal", "sync", "time"] }
tokio-tungstenite = { version = "0.30.0", features = ["rustls-tls-webpki-roots"] }
tokio-util = { version = "0.7.18", features = ["rt"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }
url = { version = "2.5.8", features = ["serde"] }
uuid = { version = "1.20.0", features = ["serde", "v4"] }
x11rb = { version = "0.13.2", features = ["xtest"] }
xkeysym = "0.2.1"

[workspace.lints.rust]
unsafe_code = "deny"
