[package]
name = "freeflow-daemon"
description = "FreeFlow Linux background service"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
freeflow-core = { path = "../freeflow-core" }

[lints]
workspace = true
