[package]
name = "freeflow-daemon"
description = "FreeFlow Linux background service"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
async-trait.workspace = true
freeflow-core = { path = "../freeflow-core" }
freeflow-openai = { path = "../freeflow-openai" }
freeflow-platform = { path = "../freeflow-platform" }
freeflow-platform-linux = { path = "../freeflow-platform-linux" }
freeflow-rpc = { path = "../freeflow-rpc" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[lints]
workspace = true
