[package]
name = "freeflow-openai"
description = "OpenAI-compatible cloud providers for FreeFlow"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
async-trait.workspace = true
base64.workspace = true
freeflow-core = { path = "../freeflow-core" }
futures-util.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
tokio-util.workspace = true
tracing.workspace = true
url.workspace = true

[dev-dependencies]
freeflow-mock-openai = { path = "../freeflow-mock-openai" }

[lints]
workspace = true
