[package]
name = "freeflow-platform-linux"
description = "Linux desktop integrations for FreeFlow"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
arboard.workspace = true
ashpd.workspace = true
async-trait.workspace = true
cpal.workspace = true
freeflow-core = { path = "../freeflow-core" }
freeflow-platform = { path = "../freeflow-platform" }
keyring.workspace = true
futures-util.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
x11rb.workspace = true
xkeysym.workspace = true

[lints]
workspace = true
