[package]
name = "freeflow-platform"
description = "Cross-platform service composition for FreeFlow"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
async-trait.workspace = true
directories.workspace = true
freeflow-core = { path = "../freeflow-core" }
serde_json.workspace = true
tokio.workspace = true

[lints]
workspace = true
