[package]
name = "freeflow-rpc"
description = "Authenticated local JSON-RPC protocol for FreeFlow"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
freeflow-core = { path = "../freeflow-core" }

[lints]
workspace = true
