[package]
name = "freeflow-rpc"
description = "Authenticated local JSON-RPC protocol for FreeFlow"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
async-trait.workspace = true
axum.workspace = true
freeflow-core = { path = "../freeflow-core" }
futures-util.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
tokio-tungstenite.workspace = true
url.workspace = true

[lints]
workspace = true
